Closed Bug 887916 Opened 11 years ago Closed 11 years ago

Fix recording of MaskSurface

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25
Tracking Status
firefox23 --- unaffected
firefox24 --- fixed
firefox25 --- fixed

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

(Keywords: regression, Whiteboard: [qa-])

Attachments

(1 file)

We overlooked implementing recording for MaskSurface. We should fix it since that helps greatly with debugging.
Attachment #768455 - Flags: review?(jmuizelaar)
Attachment #768455 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/c9bbec788caf
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Comment on attachment 768455 [details] [diff] [review]
Implement recording for MaskSurface calls

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 880836
User impact if declined: Azure recording is broken
Testing completed (on m-c, etc.): Yes
Risk to taking this patch (and alternatives if risky): None. It will not be run during regular usage.
Attachment #768455 - Flags: approval-mozilla-aurora?
Blocks: 880836
Keywords: regression
Attachment #768455 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assuming no QA needed here. Please remove [qa-] from the whiteboard and add the verifyme keyword if this needs QA.
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: