Bug 887916 - Implement recording for MaskSurface calls. r=jrmuizel, a=bajaj