gfx/2d/2D.h
@@ -719,7 +719,7 @@ public:
   virtual void MaskSurface(const Pattern &aSource,
                            SourceSurface *aMask,
                            Point aOffset,
-                           const DrawOptions &aOptions = DrawOptions()) { MOZ_ASSERT(0); };
+                           const DrawOptions &aOptions = DrawOptions()) = 0;
 
   /*
    * Push a clip to the DrawTarget.
