gfx/2d/DrawTargetRecording.h
@@ -172,6 +172,11 @@ public:
                     const Pattern &aMask,
                     const DrawOptions &aOptions = DrawOptions());
 
+  virtual void MaskSurface(const Pattern &aSource,
+                           SourceSurface *aMask,
+                           Point aOffset,
+                           const DrawOptions &aOptions = DrawOptions());
+
   /*
    * Push a clip to the DrawTarget.
    *
